# duo

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  duo.toml  trace-lite.json  traces.json
duet/: Cargo.toml
duet-api/: Cargo.toml
duet-api/proto/: common.proto  instrument.proto  log.proto  process.proto  span.proto
duet-api/src/: common.rs  instrument.rs  lib.rs  log.rs  process.rs  span.rs
duet-subscriber/: Cargo.toml
duet-subscriber/examples/: log.rs  main.rs
duet-subscriber/src/: client.rs  conn.rs  lib.rs  subscriber.rs
duet/src/: aggregator.rs  main.rs  models.rs  warehouse.rs
duet/src/grpc/: mod.rs  server.rs
duet/src/web/: deser.rs  mod.rs  serialize.rs
duo/: .gitignore  Cargo.toml
duo-api/: Cargo.toml
duo-api/proto/: common.proto  instrument.proto  log.proto  process.proto  span.proto
duo-api/src/: common.rs  instrument.rs  log.rs  process.rs  span.rs
duo-subscriber/: Cargo.toml
duo-subscriber/examples/: log.rs  main.rs
duo-subscriber/src/: client.rs  conn.rs  lib.rs  subscriber.rs
duo-ui/: .prettierrc  README.md  build-jeager.sh  build-ui.sh  build.sh  components.json  eslint.config.js  package.json  svelte.config.js
duo-ui/src/lib/: api.js  utils.js
duo-ui/src/lib/components/: Datatype.svelte  LogItem.svelte
duo-ui/src/lib/components/ui/badge/: badge.svelte  index.js
duo-ui/src/lib/components/ui/button/: button.svelte  index.js
duo-ui/src/lib/components/ui/collapsible/: collapsible-content.svelte  index.js
duo-ui/src/lib/components/ui/input/: index.js  input.svelte
duo-ui/src/lib/components/ui/progress/: index.js  progress.svelte
duo-ui/src/lib/components/ui/resizable/: index.js  resizable-handle.svelte  resizable-pane-group.svelte
duo-ui/src/lib/components/ui/scroll-area/: index.js  scroll-area-scrollbar.svelte  scroll-area.svelte
duo-ui/src/lib/components/ui/separator/: index.js  separator.svelte
duo-ui/src/routes/: +layout.svelte  +page.js  +page.svelte
duo-ui/src/routes/trace/: +page.svelte
duo-ui/src/stores/: search-ui.js
duo/src/: aggregator.rs  arrow.rs  config.rs  ipc.rs  lib.rs  main.rs  memory.rs  models.rs  partition.rs  persist.rs  query.rs  schema.rs  utils.rs  warehouse.rs
duo/src/data/: mod.rs  persist.rs  reader.rs  serialize.rs  writer.rs
duo/src/grpc/: mod.rs  server.rs
duo/src/partition/: mod.rs  query.rs  writer.rs
duo/src/staging/: mod.rs
duo/src/web/: deser.rs  logs.rs  mod.rs  query.rs  routes.rs  serialize.rs  services.rs  trace.rs
duo/ui/: index.html  trace.html
duo/ui/_app/: version.json
duo/ui/_app/immutable/assets/: 0.9240paAY.css  2.DdNfNY-u.css  3.Buu_H62d.css  3.DGf14WG5.css  _layout.CwEtsCDJ.css  _page.Do73vz5N.css
duo/ui/_app/immutable/chunks/: each.CaVw7SK1.js  each.Chk0zBHY.js  each.DGHmhJ_T.js  entry.B_NOBgf1.js  entry.CWSVKito.js  entry.CY4Bz8dl.js  entry.Cxq9-Jf0.js  entry.DHcbWYYO.js  entry.DKcSJlOR.js  entry.DbmGt4Nu.js  entry.DfqrYTBG.js  entry.DoLpqE2_.js  index.ByvDAC8F.js  index.CyECsFbO.js  index.D6PN1hnv.js  index.DrSgbLIl.js  index.LOVubqCp.js  index.hIzn_tSQ.js  scheduler.Bi1YRy3L.js  scheduler.BpSb_Omi.js  scheduler.DBUBuWm6.js
duo/ui/_app/immutable/entry/: app.0GIjCnUm.js  app.6gFToV9A.js  app.Be4SKtdE.js  app.C9MSuNpP.js  app.CM00y8zl.js  app.CQrTrJ_I.js  app.D8yx31Gz.js  app.DPYhdWs3.js  app.DQd_Gnr3.js  start.BD6Ehgb0.js  start.BRrP7wFz.js  start.C5-uEXEx.js  start.CEZj3P4J.js  start.CFw1Wo_J.js  start.CsLOT-dz.js  start.KXOXF_R5.js  start.OOFHvD3f.js  start.rpguRbsm.js
duo/ui/_app/immutable/nodes/: 0.BPHyB1rx.js  0.BRH967PU.js  0.Cp9jskGc.js  1.2BtAjlVn.js  1.BHFWzWX_.js  1.BnpB1iWx.js  1.BzivJlGB.js  1.C5bWbL30.js  1.CAIMQPnn.js  1.CwZJuE_B.js  1.D7kpQgtc.js  1.PYdUMkMF.js  2.2SOFEd-o.js  2.BG-2ZTj_.js  2.BKTA2V1u.js  2.BzWhjq4v.js  2.CP1qoMib.js  2.Cq86B-2g.js  3.C6rpSC1a.js  3.CZU3ftJi.js  3.CvrP5Z8A.js  3.eIsdfnpk.js  3.p8-6YI24.js
duo/ui/static/css/: 1.1d830a2b.chunk.css  1.69c64675.chunk.css  main.024cd045.chunk.css  main.dfcb7700.chunk.css
duo/ui/static/js/: 1.365650eb.chunk.js  1.a403f3de.chunk.js  main.ad2150d5.chunk.js  main.f89fdb33.chunk.js
jage/: Cargo.toml
jage-api/: Cargo.toml  build.rs
jage-api/proto/: common.proto  instrument.proto  log.proto  process.proto  span.proto
jage-api/src/: common.rs  instrument.rs  lib.rs  log.rs  process.rs  span.rs
jage-subscriber/: Cargo.toml
jage-subscriber/examples/: main.rs
jage-subscriber/src/: client.rs  conn.rs  lib.rs  subscriber.rs  visitor.rs
jage/src/: aggregator.rs  bundle.rs  lib.rs  main.rs  models.rs  server.rs  warehouse.rs
jage/src/grpc/: mod.rs  server.rs
jage/src/web/: deser.rs  mod.rs  query.rs  routes.rs  serialize.rs
jig/: Cargo.toml
jig-api/: Cargo.toml  build.rs
jig-api/proto/: common.proto  instrument.proto  log.proto  span.proto
jig-api/src/: common.rs  instrument.rs  lib.rs  log.rs  span.rs
jig-subscriber/: Cargo.toml
jig-subscriber/src/: lib.rs  subscriber.rs
jig/src/: main.rs
