[workspace]
members = ["duo", "duo-api", "duo-subscriber"]
exclude = ["duo-ui"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/duo-rs/duo"
license = "MIT"

[workspace.dependencies]
duo-api = { version = "0.1", path = "./duo-api" }
duo-subscriber = { version = "0.1", default-features = false, path = "./duo-subscriber" }
anyhow = "1"
tonic = "0.9"
tonic-build = "0.9"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
