[package]
name = "duo-api"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
tonic.workspace = true
prost = "0.11"
prost-types = "0.11"
tracing-core.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
