[package]
name = "duo-subscriber"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
duo-api.workspace = true
rand.workspace = true
tokio = { version = "1", features = ["time", "sync"] }
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["registry"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"
log = "0.4"
