[package]
name = "duo"
version = "0.1.0"
description = "Observability duet: Logging and Tracing"
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array = "42"
arrow-schema = "42"
arrow-json = "42"
axum = "0.6"
rand.workspace = true
clap = { version = "4", default-features = false, features = ["std", "derive"] }
duo-api.workspace = true
duo-subscriber.workspace = true
parking_lot = { version = "0.12", features = ["send_guard"] }
parquet = { version = "42", features = ["async"] }
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic.workspace = true
tower = "0.4"
tracing.workspace = true
tracing-subscriber.workspace = true
datafusion = "27"
rust-embed = "6"
mime_guess = "2"

[dev-dependencies]
rstest = "0.16"
