[package]
name = "jage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.5"
dashmap = "5.1.0"
jage-api = { version = "0.1", path = "../jage-api" }
parking_lot = { version = "0.12.0", features = ["send_guard"] }
serde = "1.0"
serde_json = "1.0"
time = "0.3.7"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
tonic = "0.6.2"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
