[package]
name = "jage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.5"
jage-api = { version = "0.1", path = "../jage-api" }
parking_lot = { version = "0.12.0", features = ["send_guard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.7", features = ["serde"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
tonic = "0.6.2"
tower = "0.4.11"
tower-http = { version = "0.2.2", features = ["fs"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
